lib_LTLIBRARIES = librtmp.la
librtmp_la_SOURCES = amf.c amf.h bytes.h dhgroups.h dh.h handshake.h hashswf.c http.h log.c log.h parseurl.c rtmp.c rtmp.h rtmp_sys.h
librtmpinclude_HEADERS = amf.h bytes.h dhgroups.h dh.h handshake.h http.h log.h rtmp.h rtmp_sys.h
librtmpincludedir = ${includedir}/rtmp
DEFS=
