lib_LTLIBRARIES = libudt.la
libudt_la_SOURCES = api.cpp api.h buffer.cpp buffer.h cache.cpp cache.h ccc.cpp ccc.h channel.cpp channel.h common.cpp common.h core.cpp core.h list.cpp list.h  md5.cpp md5.h packet.cpp packet.h queue.cpp queue.h udt.h window.cpp window.h
libtudtinclude_HEADERS = api.h buffer.h cache.h ccc.h channel.h common.h core.h list.h md5.h packet.h queue.h udt.h window.h
libtudtincludedir= ${include}/udt
DEFS=
